src/tests/test-src/errors/E13-struct-array-slice.syntran
// E13: struct-array-slice
// Struct array field slices are now fully supported for both reads and writes.
// This file is kept as a reference; it no longer triggers an error.

struct Container
{
	vals: [i32; :],
}

let c = Container{vals = [1, 2, 3, 4, 5]};
let some = c.vals[0: 2];  // read: returns [1, 2]
c.vals[0: 2] = [10, 20];  // write: updates elements 0 and 1
